--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "node --env-file=../.env ./build/backend/src/server.js",
+    "start": "node ./build/backend/src/server.js",
     "dev": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts nodemon",
     "build": "run-s build:*",
     "build:payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload build",
