--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "start": "pnpm run -r start",
-    "build": "pnpm run -r build"
+    "build": "pnpm run -r build",
+    "dev": ". .env && pnpm run -r dev"
   },
   "keywords": [],
   "author": "",
