--- a/backend/package.json
+++ b/backend/package.json
@@ -1,44 +1,44 @@
 {
-  "name": "payload",
-  "description": "A blank template to get started with Payload",
-  "version": "1.0.0",
-  "license": "MIT",
-  "scripts": {
-    "start": "node ./build/backend/src/server.js",
-    "dev": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts nodemon",
-    "build": "run-s build:*",
-    "build:payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload build",
-    "build:server": "tsc",
-    "serve": "pm2 startOrRestart --update-env ./ecosystem.config.js",
-    "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png}\" dist/",
-    "generate:types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types",
-    "generate:graphQLSchema": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:graphQLSchema",
-    "payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload"
-  },
-  "dependencies": {
-    "@mdi/js": "^7.4.47",
-    "@payloadcms/bundler-webpack": "^1.0.7",
-    "@payloadcms/db-mongodb": "^1.7.5",
-    "@payloadcms/plugin-cloud": "^2.2.6",
-    "@payloadcms/richtext-slate": "^1.5.2",
-    "@types/deep-equal": "^1.0.4",
-    "@types/express-http-proxy": "^1.6.7",
-    "@types/leaflet": "^1.9.20",
-    "cross-env": "^7.0.3",
-    "deep-equal": "^2.2.3",
-    "dotenv": "^8.6.0",
-    "express": "^4.21.2",
-    "express-http-proxy": "^1.6.3",
-    "leaflet": "^1.9.4",
-    "payload": "^2.32.3",
-    "react": "^18.3.1"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.23",
-    "copyfiles": "^2.4.1",
-    "nodemon": "^2.0.22",
-    "npm-run-all": "^4.1.5",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.9.5"
-  }
+    "name": "payload",
+    "description": "A blank template to get started with Payload",
+    "version": "1.0.0",
+    "license": "MIT",
+    "scripts": {
+        "start": "node ./build/backend/src/server.js",
+        "dev": "env $(cat ../.env) nodemon",
+        "build": "run-s build:*",
+        "build:payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload build",
+        "build:server": "tsc",
+        "serve": "pm2 startOrRestart --update-env ./ecosystem.config.js",
+        "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png}\" dist/",
+        "generate:types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types",
+        "generate:graphQLSchema": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:graphQLSchema",
+        "payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload"
+    },
+    "dependencies": {
+        "@mdi/js": "^7.4.47",
+        "@payloadcms/bundler-webpack": "^1.0.7",
+        "@payloadcms/db-mongodb": "^1.7.5",
+        "@payloadcms/plugin-cloud": "^2.2.6",
+        "@payloadcms/richtext-slate": "^1.5.2",
+        "@types/deep-equal": "^1.0.4",
+        "@types/express-http-proxy": "^1.6.7",
+        "@types/leaflet": "^1.9.20",
+        "cross-env": "^7.0.3",
+        "deep-equal": "^2.2.3",
+        "dotenv": "^8.6.0",
+        "express": "^4.21.2",
+        "express-http-proxy": "^1.6.3",
+        "leaflet": "^1.9.4",
+        "payload": "^2.32.3",
+        "react": "^18.3.1"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.23",
+        "copyfiles": "^2.4.1",
+        "nodemon": "^2.0.22",
+        "npm-run-all": "^4.1.5",
+        "ts-node": "^9.1.1",
+        "typescript": "^4.9.5"
+    }
 }
